# stock-analysis

./: .env.example  .env.test  .gitignore  AGENTS.md  CHANGELOG  Dockerfile  LEARN.md  README.md  TASKS.md  docker-compose.yml  opencode.json  pyproject.toml  qr_whatsapp.html  requirements.txt
.github/workflows/: ci.yml
.opencode/: context.md
app/: config.py  database.py  main.py  models.py  schemas.py
app/brokers/: binance.py  interactive_brokers.py  yahoo_finance.py
app/core/: __init__.py  base_broker.py  broker_manager.py  chart_registry.py  debug.py  strategies.py
app/routers/: admin_router.py  alerts_router.py  auth_router.py  (+5 more)
docs/: api-reference.md  architecture.md  ci-cd-guide.md  deployment.md  frontend.md  indicators.md  whatsapp-gateway.md
estudio/: 01-git-github.md  02-github-actions.md  03-docker.md  04-python-fastapi.md  05-bases-de-datos.md  06-frontend.md  07-testing.md  08-whatsapp-baileys.md  09-herramientas.md  10-websockets.md  README.md
tests/: conftest.py  test_admin.py  test_alerts_router.py  test_analysis_router.py  test_analysis_service.py  test_auth.py  test_background_analyzer.py  test_background_result.py  test_broker_manager.py  test_brokers.py  test_charts.py  test_config.py  test_config_router.py  test_debug_router.py  test_docker_compose.py  test_main.py  test_ml_backtest.py  test_options_router.py  test_prediction_service.py  test_prediction_service_coverage.py  test_strategies.py  test_technical_analysis.py  test_websocket.py  test_whatsapp_service.py
whatsapp-gateway/: Dockerfile  index.js  package-lock.json  package.json
(+375 files in other folders)
