[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
